--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "i18next": "^23.16.5",
     "js-cookie": "^3.0.5",
-    "next": "14.2.14",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^13.1.0",
+    "next-i18next": "^15.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-i18next": "^15.1.1",
     "react-otp-input": "^3.1.1",
     "react-toastify": "^10.0.6"
   },
