--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-otp-input": "^3.1.1",
-    "react-toastify": "^10.0.6"
+    "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "^8",
