--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "next": "^15.0.3",
@@ -16,8 +17,11 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-otp-input": "^3.1.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
+    "redux": "^5.0.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
