--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.53.2",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
