--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-autocomplete": "^2.7.3",
     "react-hook-form": "^7.53.2",
+    "react-moment": "^1.1.3",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.0",
