--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
@@ -25,6 +26,7 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
