--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.0",
+    "react-select": "^5.9.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
